finally an api that works

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  background-color: #FAA0A0;
+}
+
+h1, h3 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.changePage {
+  width: 80vw;
+  margin: auto;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pagebtn {
+  width: 100px;
+  background-color: crimson;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding: 4px 0;
+  margin: 7px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pagebtn:hover {
+  background-color: #e25972;
+  cursor: pointer;
 }
