--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #FAA0A0;
 }
 
-h1, h3 {
+body {
+  background-color: #FAA0A0;
+  font-family: 'Inter', sans-serif;
+}
+
+h1, h2, h3, h4 {
   text-align: center;
   padding: 3px 0;
 }
@@ -27,6 +31,18 @@ h1, h3 {
 .pagebtn:hover {
   background-color: #e25972;
   cursor: pointer;
+}
+
+.links {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  font-family: 'Source Code Pro', monospace;
+}
+
+.links:hover {
+  cursor: pointer;
+  color: crimson;
 }
 
 .home {
@@ -53,4 +69,25 @@ h1, h3 {
 .homebtn:hover {
   cursor: pointer;
   background-color: #e25972;
+}
+
+.card {
+  border: 2px solid black;
+  background-color: whitesmoke;
+  width: 25vw;
+  margin: auto;
+  margin-bottom: 15px;
+  padding: 3px;
+  text-align: center;
+}
+
+.pokeImg {
+  width: 100%;
+  height: auto;
+}
+
+.xp {
+  float: left;
+  padding-left: 3px;
+  color: crimson;
 }
